--- a/stlye.css
+++ b/stlye.css
@@ -1,36 +1,160 @@
 /* style.css */
 
-.main {
-  width: 300px;
-  height: 300px;
-  margin: auto auto;
-  display: flex;
-  flex-direction: column;
+
+
+body{
+  margin:0;
+  background-color:rgb(189, 241, 189);
 }
 
-/* table,
-th,
-td {
+
   
-} */
+.game-container{
+display:flex;
+flex-direction: column;
+align-items: center;
+gap:15px;
+height:100vh;
+}
+
+.timer-container{
+  text-align: center;
+}
+
+.timer{
+  background-color: #fff;
+  color: #000;
+  margin:1rem auto;
+  width: 3rem;
+  height: 2rem; 
+  border-radius: 100px;
+  background-color: rgba(116, 207, 153, 0.391);
+  margin-top: 2rem;
+  padding: 0rem 0.5rem;
+  text-align: center;
+  border: 0.1px solid grey;
+  color: white; 
+  font-size: 1.3rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  margin-bottom: -0.6rem;
+ 
+
+
+}
+
+
+
+td {
+  color: white; 
+  font-size: 1.5rem;
+  text-align: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  
+
+}
+
+.buttons{
+  text-align:center
+  
+  
+  
+}
+.board-container {
+  width: 97%;
+  height: 10rem;
+  margin:0;
+  display: flex;
+  flex-direction: column;
+
+}
+
+table{
+  background-color: rgba(167, 242, 197, 0.391);
+  padding:padding 0.9rem;
+  overflow: hidden;
+  border-radius: 20px;
+
+}
 
 .cellClicked {
-  height: 50px;
-  width: 50px;
+  height: 4rem;
+  width: 4rem;
   text-align: center;
   background-color: rgba(43, 187, 100, 0.391);
-  border-radius: 60px;
+  border-radius: 50px;
+  
+}
+  
+.cellClicked:hover{
+  transform: translateY(-0.1rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0 , 0, 0.10);
+  cursor: pointer;
+
+}
+
   
   
+.game-start-container{
+display:flex;
+flex-direction: column;
+ align-items: center;
+
 }
 
 .btn{
-  border-radius: 20px;
-  background-color: rgba(43, 187, 100, 0.391);
-  margin-top: 5px;
+
+    width: 5rem;
+    height: 3rem; 
+    border-radius: 40px;
+    background-color: rgba(116, 207, 153, 0.391);
+    margin-top: 1rem;
+    padding: 0rem 1rem;
+    text-align: center;
+    border: 0.1px solid grey;
+    color: white; 
+    font-size: 0.7rem;
+   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+   text-transform: uppercase;
+   
+   
+  }
+
+  .btn{
+    cursor: pointer;
+  }
+
+    .made-by {
+      margin-top: 1rem;
+      padding: 1rem; 
+      background-color: rgba(22, 177, 84, 0.391);
+      border-radius: 4rem;
+      width: 11rem;
+      text-align: center;
+      display: inline-block;
+      color:white;
+      font-size: 1rem;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+  }
+  
+.clicked-button{
+  background-color: rgba(152, 181, 163, 0.391);
 }
 
 
+.game-actions{
+display: flex;
+flex-direction: row;
+gap:0.5rem
+}
+
+.game-restart{
+font-size: 1.4rem;
+
+}
+.flag{
+font-size: 1.4rem;
+
+}
 
 
 
